- Deactivate test for custom peer setting until Torque 4.1 is released. - Add getConstructor to get InvocationTargetException.
git-svn-id: https://svn.apache.org/repos/asf/turbine/fulcrum/trunk/security@1661906 13f79535-47bb-0310-9956-ffa450edef68